# bookmarks

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  biome.json  conftest.py  package-lock.json  package.json  pyproject.toml
accounts/: admin.py  backends.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_make_username_optional.py
accounts/templates/accounts/: _passkeys_list.html  _webauthn_utils.html  account.html  login.html  register.html  settings.html
accounts/tests/: test_models.py  test_views.py
api/v1/: urls.py  views.py
api/v1/tests/: test_views.py
api/v2/: urls.py  views.py
api/v2/tests/: test_views.py
assets/css/: print.css  styles.css  styles.css.map
assets/js/: passkeys.js
assets/libs/: alpine.min.js
assets_src/css/: _colors.css  _custom.css  _init.css  _variables.css  styles.css
assets_src/css/base/: _forms.css
assets_src/css/components/: _button.css  _header.css  _htmx-indicator.css  _messages.css  _pager.css
config/: django.py  settings.py  urls.py
home/: urls.py  views.py
home/templates/home/: about.html  home.html  tos.html
links/: admin.py  api.py  api_urls.py  apps.py  cache.py  forms.py  importexport.py  models.py  signals.py  urls.py  user_urls.py  views.py
links/migrations/: 0001_initial.py  0002_add_shared_toread.py  0002_add_user_url_and_updated_at_indexes.py  0003_description_max_length.py
links/templates/links/: _bookmark_item.html  _delete_confirm.html  _delete_confirm_inline.html  _delete_link.html  _fetch_meta_fields.html  _form_include.html  _list_partial.html  _modal_confirm_delete.html  _modal_form.html  _public_list_partial.html  _sidebar_partial.html  bookmarklet_form.html  confirm_delete.html  form.html  import.html  list.html  public_list.html
links/tests/: test_importexport.py  test_models.py  test_views.py
locale/en/LC_MESSAGES/: django.po
locale/sv/LC_MESSAGES/: django.mo  django.po
subscriptions/: admin.py  context_processors.py  middleware.py  models.py  swish.py  urls.py  utils.py  vat.py  views.py
subscriptions/migrations/: 0001_initial.py  0002_delete_payment.py
templates/: base.html  base_slim.html
(+8 files in other folders)
