[project]
name = "bookmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "django-htmx>=1.27.0",
    "django-nh3>=0.3.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "dslr>=0.6.0",
    "pre-commit>=4.6.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.11",
    "werkzeug>=3.1.8",
]
