[project]
name = "bookmarks"
version = "0.1.0"
description = "A private bookmark service with passkey authentication."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cuid2>=2.0.1",
    "django>=6.0.4",
    "django-htmx>=1.27.0",
    "django-nh3>=0.3.1",
    "psycopg[binary]>=3.2.0",
    "webauthn>=2.2.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "dslr>=0.6.0",
    "pre-commit>=4.6.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.11",
    "werkzeug>=3.1.8",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.ruff.lint]
select = ["E", "F", "I"]
