[project]
name = "bookmarks"
version = "0.1.0"
description = "A private bookmark service with passkey authentication."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "cuid2>=2.0.1",
    "django>=6.0.4",
    "django-htmx>=1.27.0",
    "django-nh3>=0.3.1",
    "environs>=15.0.1",
    "psycopg[binary]>=3.2.0",
    "webauthn>=2.2.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.3.0",
    "django-extensions>=4.1",
    "dslr>=0.6.0",
    "pre-commit>=4.6.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.11",
    "werkzeug>=3.1.8",
]

[tool.uv]
default-groups = ["dev"]
required-version = ">=0.5.0"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.ruff.lint]
ignore = [
    "E501", # line too long
    "C901", # too complex
    # 'F821',
    # 'W605',
]
select = [
    'C', # flake8-comprehensions
    'B', # flake8-bugbear
    'E', # pycodestyle errors
    'F', # pyflakes
    'I', # iSort
    'W', # pycodestyle warnings
]
